<?xml version="1.0"?>
<package format="2">
  <name>LoadCellPublisher</name>
  <version>0.0.1</version>
  <description>Publishes ESP32 load cell data to a ROS topic using a custom message type</description>

  <maintainer email="jason@cormedicalventures.com">Jason Lim</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies required at build time -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies required at run time -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Python execution support -->
  <exec_depend>python3</exec_depend>

  <!-- Optional tags -->
  <export>
  </export>
</package>
